Some Api + Ui changes

--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.8.4",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^1.16.7",
     "@react-navigation/bottom-tabs": "^5.11.13",
     "@react-navigation/native": "^5.9.6",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "galio-framework": "^0.8.0",
     "radio-buttons-react-native": "^1.0.4",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-calendars": "^1.1264.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-otp-inputs": "^7.0.3",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
